[package]
name = "tokmd-analysis-format"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Formatting and rendering for tokmd analysis receipts."
readme = "README.md"
keywords = ["formatting", "markdown", "json", "visualization", "code-analysis"]
categories = ["development-tools", "encoding"]
documentation = "https://docs.rs/tokmd-analysis-format"
include = ["src/", "README.md", "Cargo.toml", "test-fixtures/sample-receipt.json"]

[features]
default = []
fun = ["dep:tokmd-fun"]

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tokmd-analysis-format-md.workspace = true
tokmd-analysis-html.workspace = true
tokmd-analysis-types.workspace = true
tokmd-types.workspace = true

# Optional fun output helpers
tokmd-fun = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
midly = "0.5.3"
proptest.workspace = true
