[package]
name = "tokmd-analysis-git"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Git and churn enrichment microcrate for tokmd analysis presets."
readme = "README.md"
keywords = ["analysis", "git", "enrichment", "churn", "coupling"]
categories = ["development-tools"]
documentation = "https://docs.rs/tokmd-analysis-git"

[dependencies]
anyhow.workspace = true
tokmd-analysis-types.workspace = true
tokmd-scan.workspace = true
tokmd-git.workspace = true
tokmd-types.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
