[package]
name = "tokmd-analysis-grid"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Analysis preset and feature-gate metadata for tokmd analysis orchestration."
readme = "README.md"
keywords = ["analysis", "feature-flags", "presets", "inventory", "metadata"]
categories = ["development-tools"]
documentation = "https://docs.rs/tokmd-analysis-grid"

[dev-dependencies]
proptest = "1.10.0"

[features]
default = []
git = []
walk = []
content = []
halstead = ["content", "walk"]
fun = ["dep:tokmd-analysis-fun"]
topics = ["dep:tokmd-analysis-topics"]
archetype = ["dep:tokmd-analysis-archetype"]

[dependencies]
tokmd-analysis-fun = { workspace = true, optional = true }
tokmd-analysis-topics = { workspace = true, optional = true }
tokmd-analysis-archetype = { workspace = true, optional = true }

