[package]
name = "tokmd-analysis-html"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Single-responsibility HTML renderer for tokmd analysis receipts."
readme = "README.md"
keywords = ["analysis", "html", "report", "rendering", "visualization"]
categories = ["development-tools", "encoding"]
documentation = "https://docs.rs/tokmd-analysis-html"
include = ["src/", "README.md", "Cargo.toml"]

[dependencies]
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["formatting", "macros"] }
tokmd-analysis-types.workspace = true

[dev-dependencies]
tokmd-types.workspace = true
