[package]
name = "tokmd-analysis-topics"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Topic-cloud enrichment for analysis receipts."
readme = "README.md"
keywords = ["analysis", "topics", "tfidf", "microcrate", "repositories"]
categories = ["development-tools"]
documentation = "https://docs.rs/tokmd-analysis-topics"

[dependencies]
tokmd-analysis-types.workspace = true
tokmd-types.workspace = true

[dev-dependencies]
proptest = "1.10.0"
