[package]
name = "tokmd-analysis-types"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Analysis receipt contracts for tokmd."
readme = "README.md"
keywords = ["code-analysis", "metrics", "receipts", "schema", "serde"]
categories = ["development-tools", "data-structures"]
documentation = "https://docs.rs/tokmd-analysis-types"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokmd-envelope.workspace = true
tokmd-types.workspace = true

[dev-dependencies]
proptest = "1.9.0"
serde_json = "1.0.149"
