[package]
name = "tokmd-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Analysis logic and enrichers for tokmd receipts."
readme = "README.md"
keywords = ["code-analysis", "metrics", "cocomo", "hotspots", "enrichment"]
categories = ["development-tools"]
documentation = "https://docs.rs/tokmd-analysis"

[features]
default = ["fun", "topics", "archetype", "effort"]
git = [
    "dep:tokmd-git",
    "dep:tokmd-analysis-git",
    "tokmd-analysis-effort/git",
]
walk = [
    "dep:tokmd-walk",
    "dep:tokmd-analysis-license",
]
content = [
    "dep:tokmd-analysis-content",
    "dep:tokmd-analysis-complexity",
    "dep:tokmd-analysis-entropy",
    "dep:tokmd-analysis-api-surface",
    "dep:tokmd-analysis-near-dup",
]
halstead = [
    "content",
    "walk",
    "dep:tokmd-analysis-halstead",
    "dep:tokmd-analysis-maintainability",
]
effort = ["dep:tokmd-analysis-effort"]
fun = []
topics = []
archetype = []

[dependencies]
anyhow.workspace = true
blake3.workspace = true
serde_json.workspace = true

# Core contracts
tokmd-analysis-types.workspace = true
tokmd-analysis-util.workspace = true
tokmd-format.workspace = true
tokmd-scan.workspace = true
tokmd-types.workspace = true

# Optional adapters
tokmd-git = { workspace = true, optional = true }
tokmd-analysis-git = { workspace = true, optional = true }
tokmd-analysis-content = { workspace = true, optional = true }
tokmd-walk = { workspace = true, optional = true }
tokmd-analysis-near-dup = { workspace = true, optional = true }
tokmd-analysis-api-surface = { workspace = true, optional = true }
tokmd-analysis-complexity = { workspace = true, optional = true }
tokmd-analysis-entropy = { workspace = true, optional = true }
tokmd-analysis-license = { workspace = true, optional = true }
tokmd-analysis-halstead = { workspace = true, optional = true }
tokmd-analysis-maintainability = { workspace = true, optional = true }
tokmd-analysis-effort = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
serde.workspace = true
insta = { workspace = true }
tokmd-test-support.workspace = true
