[package]
name = "tokmd-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Analysis logic and enrichers for tokmd receipts."
readme = "README.md"
keywords = ["code-analysis", "metrics", "cocomo", "hotspots", "enrichment"]
categories = ["development-tools"]
documentation = "https://docs.rs/tokmd-analysis"

[features]
default = ["fun", "topics", "archetype", "effort"]
git = [
    "dep:tokmd-git",
]
walk = [
    "dep:tokmd-walk",
]
content = [
    "dep:tokmd-content",
    "dep:globset",
    "dep:rustc-hash",
]
halstead = [
    "content",
    "walk",
]
effort = []
fun = []
topics = []
archetype = []

[dependencies]
anyhow.workspace = true
blake3.workspace = true
serde_json.workspace = true
globset = { version = "0.4.18", optional = true }
rustc-hash = { version = "2", optional = true }

# Core contracts
tokmd-analysis-types.workspace = true
tokmd-format.workspace = true
tokmd-scan.workspace = true
tokmd-types.workspace = true

# Optional adapters
tokmd-git = { workspace = true, optional = true }
tokmd-content = { workspace = true, optional = true }
tokmd-walk = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
serde.workspace = true
insta = { workspace = true }
tokmd-test-support.workspace = true
