[package]
name = "tokmd-badge"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "SVG badge rendering helpers for tokmd metrics."
documentation = "https://docs.rs/tokmd-badge"
readme = "README.md"
keywords = ["badge", "svg", "metrics", "tokmd"]
categories = ["command-line-utilities"]

[dependencies]
