[package]
name = "tokmd-cockpit"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Cockpit PR metrics computation and rendering for tokmd."
documentation = "https://docs.rs/tokmd-cockpit"
readme = "README.md"
keywords = ["code-review", "pr-metrics", "cockpit", "tokmd"]
categories = ["development-tools"]

[features]
default = ["git"]
git = ["dep:tokmd-git"]

[dependencies]
anyhow = "1.0.101"
blake3.workspace = true
ignore = "0.4.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.41", features = ["formatting"] }
tokmd-analysis-types.workspace = true
tokmd-envelope.workspace = true
tokmd-types.workspace = true

# Optional git support
tokmd-git = { workspace = true, optional = true }

[dev-dependencies]
proptest = "1.10.0"
tempfile = "3.25.0"
