[package]
name = "tokmd-config"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Configuration schemas and defaults for tokmd."
readme = "README.md"
keywords = ["configuration", "cli", "clap", "settings", "toml"]
categories = ["development-tools", "config"]
documentation = "https://docs.rs/tokmd-config"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
tokmd-settings.workspace = true
tokmd-types = { workspace = true, features = ["clap"] }


[dev-dependencies]
proptest = "1.9.0"
serde_json = "1.0.149"
tempfile = "3.20.0"
