[package]
name = "tokmd-config"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Configuration schemas and defaults for tokmd."
readme = "README.md"
keywords = ["configuration", "cli", "clap", "settings", "toml"]
categories = ["development-tools", "config"]
documentation = "https://docs.rs/tokmd-config"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tokmd-settings.workspace = true
tokmd-tool-schema.workspace = true
tokmd-types = { workspace = true, features = ["clap"] }


[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
toml = "1.1"
tokmd-settings.workspace = true
