[package]
publish = false
name = "tokmd-config"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Configuration schemas and defaults for tokmd."
readme = "README.md"
keywords = ["configuration", "cli", "clap", "settings", "toml"]
categories = ["development-tools", "config"]
documentation = "https://docs.rs/tokmd-config"

[dependencies]
tokmd.workspace = true


[dev-dependencies]
clap = { version = "4.6.0", features = ["derive"] }
proptest.workspace = true
tempfile.workspace = true
serde_json.workspace = true
toml = "1.1"
